# synchro

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/components/: Sidebar.tsx
apps/desktop/src/data/: games.ts
apps/desktop/src/pages/: CreateSessionPage.tsx  HintsPage.tsx  HistoryPage.tsx  JoinSessionPage.tsx  LibraryPage.tsx  OverlayPage.tsx  SessionPage.tsx  SettingsPage.tsx
apps/desktop/src/ui/: primitives.tsx
apps/overlay/: package.json
apps/overlay/src/: App.tsx
docs/: Design.md  network-protocol.md  stage-1-pitch.md  stage-2-planning.md  stage-3-design.md  stage-4-5-development.md
scripts/: extract-build.mjs  import_hk.mjs  setup.sh
