[workspace]
members = [
  "apps/desktop/src-tauri",
  "packages/net-server",
  "packages/engine-generator",
  "packages/detector",
  "packages/patcher-core",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio-tungstenite = "0.21"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
