[package]
name = "synchro-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "synchro_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
net-server = { path = "../../../packages/net-server" }
engine-generator = { path = "../../../packages/engine-generator" }
detector = { path = "../../../packages/detector" }
patcher-core = { path = "../../../packages/patcher-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
